# infinite-context

./: .gitignore  README.md  bookqa_traces.txt  calibrate_judge.py  debug.py  eval_oolong.py  fold_traces.txt  frontier_ceiling.py  frontier_released.py  harness.py  metrics.py  narrativeqa_traces.txt  niah_data.py  pyproject.toml  realdoc_traces.txt  rl.py  rl.sh  sft.py  synth_traces.txt  trace_counting.py  train.py  train.sh
eval/: __init__.py  agent.py  backends.py  judge.py  render.py  run.py  synth_oracle.py
eval_results/: RESULTS.md  plot_length_sweep.py
eval_results/raw/: base_qwen_oolong_counting_decomp.jsonl  base_qwen_oolong_counting_decomp.txt  base_qwen_oolong_single.jsonl  base_qwen_oolong_single.txt  base_qwen_ruler_decomp.jsonl  base_qwen_ruler_decomp.txt  base_qwen_ruler_single.jsonl  base_qwen_ruler_single.txt  gpt5_4_oolong_20k.summary.txt  gpt5_4_oolong_counting_decomp.jsonl  gpt5_4_oolong_counting_decomp.txt  gpt5_4_sample_rollout_10k.txt  sft_oolong_40k.summary.txt  sft_oolong_80k.summary.txt
oracle/: __init__.py  base.py  bookqa.py  classic.py  realdoc.py  synth.py
scripts/: cache_bookqa.py  cache_narrativeqa.py
tasks/: __init__.py  base.py  corpus.py  registry.py
tasks/bookqa/: __init__.py  generators.py
tasks/niah/: __init__.py  generators.py
tasks/oolong/: __init__.py  generators.py
tasks/oolong/vendored_synth/: EvalContextWindow.py  constants.py  (+4 more)
tasks/realdoc/: __init__.py  books.py  generators.py
tasks/ruler/: __init__.py  _common.py  constants.py  generators.py  qa_data.py
tasks/synth/: __init__.py  generators.py
